SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/Exercise__c.object-meta.xml
<CustomObject>
    <label>Exercise (Type)</label>
    <nameField>
        <label>Exercise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exercises (Type)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>