SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/fields/Database_Origin__c.field-meta.xml
<CustomField>
    <fullName>Database_Origin__c</fullName>
    <label>Database Origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>