SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/fields/Primary_Bodypart_Worked__c.field-meta.xml
<CustomField>
    <fullName>Primary_Bodypart_Worked__c</fullName>
    <label>Primary Bodypart Worked</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Biceps</fullName>
            </value>
            <value>
                <fullName>Calves</fullName>
            </value>
            <value>
                <fullName>Chest</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Forearms</fullName>
            </value>
            <value>
                <fullName>Hamstrings</fullName>
            </value>
            <value>
                <fullName>Lats</fullName>
            </value>
            <value>
                <fullName>Lower Back</fullName>
            </value>
            <value>
                <fullName>Middle Back</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Quads</fullName>
            </value>
            <value>
                <fullName>Shoulders</fullName>
            </value>
            <value>
                <fullName>Traps</fullName>
            </value>
            <value>
                <fullName>Triceps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>