SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/fields/Push_Pull_Legs__c.field-meta.xml
<CustomField>
    <fullName>Push_Pull_Legs__c</fullName>
    <label>Push, Pull, Legs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>Pull</fullName>
            </value>
            <value>
                <fullName>Legs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>