SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/validationRules/Unique_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  CONTAINS(
      VLOOKUP( 
        $ObjectType.Exercise__c.Fields.Name , 
        $ObjectType.Exercise__c.Fields.Name, Name
      ), 
      Name
    ), 
  OR(
      ISNEW(), ISCHANGED(Name)
    ) 
  )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>There is already a exercise with this name, please use that.</errorMessage>
</ValidationRule>