SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Primary_Bodypart_Worked__c</columns>
    <columns>Push_Pull_Legs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Database_Origin__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>Standard Exercises</label>
</ListView>