SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/listViews/ExercisesICreated.listView-meta.xml
<ListView>
    <fullName>ExercisesICreated</fullName>
    <columns>NAME</columns>
    <columns>Primary_Bodypart_Worked__c</columns>
    <columns>Push_Pull_Legs__c</columns>
    <filterScope>Mine</filterScope>
    <label>Exercises I Created</label>
</ListView>