SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/listViews/Legs.listView-meta.xml
<ListView>
    <fullName>Legs</fullName>
    <columns>NAME</columns>
    <columns>Primary_Bodypart_Worked__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Push_Pull_Legs__c</field>
        <operation>equals</operation>
        <value>Legs</value>
    </filters>
    <filters>
        <field>Database_Origin__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>Legs</label>
</ListView>