SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise__c/listViews/Push.listView-meta.xml
<ListView>
    <fullName>Push</fullName>
    <columns>NAME</columns>
    <columns>Push_Pull_Legs__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Push_Pull_Legs__c</field>
        <operation>equals</operation>
        <value>Push</value>
    </filters>
    <filters>
        <field>Database_Origin__c</field>
        <operation>equals</operation>
        <value>Standard</value>
    </filters>
    <label>Push</label>
</ListView>